--- a/project1/src/main/webapp/resources/css/detail.css
+++ b/project1/src/main/webapp/resources/css/detail.css
@@ -4,10 +4,10 @@
 	display: block;
 }
 body{
-	background-color: #F8DEC5;
+	background-color: white;
 }
 div{
-	background-color: #F8DEC5;
+	background-color: white;
 	margin: 0 auto;
 }
 
