--- a/project1/src/main/webapp/resources/css/write.css
+++ b/project1/src/main/webapp/resources/css/write.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 body{
-	background-color: #F8DEC5;
+	background-color: white;
 }
 h1{
 	text-align: center;
 	margin: 0 auto;
 	display: block;
-	color : #e2bca5;
+	color : #04ACDC;
 }
 .img1{
 	margin: 0 auto;
